@@ -1,3 +1,8 @@
+2007-12-14  Akim Demaille  <demaille@gostai.com>
+
+	Prefer enums to #define.
+	* sysexits.hh: here.
+
 2007-11-09  Akim Demaille  <demaille@gostai.com>
 
 	Fix cpp guard.
